# ram-cli

./: Cargo.toml  README.md  test.ramemu
.github/workflows/: cd.yaml  ci.yaml
src/: check.rs  cli.rs  colorize.rs  create_program.rs  display_error.rs  errors.rs  highlighter.rs  io_manager.rs  lib.rs  main.rs  run.rs
tests/: isprime.ramemu
