[package]
name = "ram-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
clap_complete = "4"
colored = "2.0.0"
ramemu = { git = "https://github.com/AVO-cado-team/ramemu.git", tag = "0.1.3"}
